Fix headings error (NU)

--- a/materials.html
+++ b/materials.html
@@ -69,7 +69,7 @@
     <main>
         <section class="section-full flex flex-center section-padding--bottom">
             <div class="container flex flex-column flex-column--mobile">
-
+            <h2><span>Follow</span> the white filament</h2>
                 <picture class="flex flex-center">
                     <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
                     <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
@@ -78,7 +78,7 @@
                         alt="this should be a filament image">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
-                    <h2 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h2>
+                    <h3 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h3>
                     <p>Materials in 3D printing are made of long strands of plastic (filament). They get pushed through
                         the heated nozzle of a 3d printer, where they are molten and reapplied to the print bed.
                         Filaments come in two sizes - 3mm and 1.75mm. Which one is used is mainly determined by the type
@@ -86,7 +86,7 @@
                         use 1.75mm.</p>
                 </article>
                 <article>
-                    <h2 class="margin-bottom--s"><span>WHICH </span>materials are there?</h2>
+                    <h3 class="margin-bottom--s"><span>WHICH </span>materials are there?</h3>
                     <p>The most common materials used in 3d printing are PLA, ABS and PETG. PLA is a very good base
                         material which can be printed easily due to its low melting point of about 180 degrees celsius.
                         The only drawback is that it isnt very heat resistant. Printed objects must not exceed ambient
@@ -107,7 +107,7 @@
                         alt="this should be a filament roll">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
-                    <h2 class="margin-bottom--s"><span>ARE</span> they safe?</h2>
+                    <h3 class="margin-bottom--s"><span>ARE</span> they safe?</h3>
                     <p>It depends. Some companies advertise their materials as safe for food and safe for toys. But this
                         needs to be taken with a grain of salt, because the safe labels do not account forthe production
                         process, which is 3d printing in this case. This study suggests that there are also toxic fumes
@@ -115,7 +115,7 @@
                         it, go ahead to safe on the safe side.</p>
                 </article>
                 <article>
-                    <h2 class="margin-bottom--s"><span>CAN</span> I make my own?</h2>
+                    <h3 class="margin-bottom--s"><span>CAN</span> I make my own?</h3>
                     <p>Yes definetly, there are existing community efforts to build small home extruders. But it isnt as
                         easy as you might think. So before you get your feet wet in that, try to run the numbers for
                         bought
