--- a/models.html
+++ b/models.html
@@ -69,7 +69,7 @@
     <main>
     <section class="section-full flex flex-center section-padding--bottom">
     <div class="container container--mobile">
-        
+        <h2><span>You</span> can model too!</h2>
             <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-octocat-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-octocat-mobile.png">
@@ -77,12 +77,12 @@
                 <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-octocat.png" alt="this should be a printd 3d model">
             </picture>
             <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h2>
+                <h3 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h3>
                 <p>A 3D model represents geometry in 3D space. It is defined by vertices, edges and faces and also their position in 3D space (X, Y and Z axis). The most common file type for 3D printers is the STL (STereoLithography) file format and can be exported from a variety of softwares.
                 </p>
             </article>
             <article>
-                <h2 class="margin-bottom--s"><span>HOW </span>can I make them?</h2>
+                <h3 class="margin-bottom--s"><span>HOW </span>can I make them?</h3>
                 <p>3D models are made with CAD programs like Fusion360 or Moi3D. There is a learning curve to these type of programs nut fortunately it is not very steep, depending on what you need to do.
                 </p>
             </article>
@@ -93,7 +93,7 @@
                 <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-3d-desk.png" alt="this should be a table">
             </picture>
             <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h2>
+                <h3 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h3>
                 <p>Getting hold of 3D models is not very hard. There are plenty of sites in the internet which provide them. The most popular site is Thingiverse, but there are also other sites like
                     Cults or CGTrader. You can search for what you need there, but be aware that some models need to be paid.
                 </p>
