Fix main element position

--- a/response.html
+++ b/response.html
@@ -58,16 +58,17 @@
     <!--RESPONSIVE HEADER END-->
 
     <!--CONTENT SECTION START-->
+    <main>
     <section class="section-full flex flex-center section-padding--bottom background-reverse">
     <div class="container container--mobile flex flex-center  flex-column--mobile text-center">
-        <main class="response rounded box-shadow">
+        <div class="response rounded box-shadow">
             <h1><span>CONGRATULATIONS!</span></h1>
             <p class="margin-top--s">Thanks for your mail, we will come back to you within 48h!</p>
             <p id="hidden" class="margin-top--s hide">You have also signed up for the newsletter, thanks!</p>
-        </main>
+        </div>
     </div>
     </section>
-    
+    </main>
 
     <!--FOOTER START-->
     <footer class="flex flex-center fix-bottom">
