--- a/basics.html
+++ b/basics.html
@@ -62,7 +62,7 @@
         <div class="container flex flex-center text-white text-shadow">
             <h1><span>BASICS</span> of 3D Printing</h1>
         </div>
-        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
+        <img class="flip-x divider-bottom divider" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
     </section>
 
     <!--CONTENT SECTION START-->
