--- a/materials.html
+++ b/materials.html
@@ -58,11 +58,11 @@
 
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center flex-column flex-between background">
-        <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+        <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile text-white text-shadow flex flex-center">
             <h1><span>MATERIALS</span> for 3D Printing</h1>
         </div>
-        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
+        <img class="flip-x divider-bottom divider" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
     </section>
 
     <!--CONTENT SECTION START-->
