Fix image extensions

--- a/help.html
+++ b/help.html
@@ -71,10 +71,10 @@
     <div class="container flex flex-column flex-column--mobile">
         <h2><span>HELP </span>is on the way!</h2>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-clogged-nozzle.png" alt="this should be a printhead">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.jpg">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.jpg">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.jpg">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-clogged-nozzle.jpg" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h3 class="margin-bottom--s"><span>CLOGGED </span>nozzles</h3>
@@ -89,10 +89,10 @@
                 </p>
             </article>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-my-model-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-my-model-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-my-model-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-my-model.png" alt="this should be a printhead">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-my-model-mobile.jpg">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-my-model-mobile.jpg">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-my-model-mobile.jpg">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-my-model.jpg" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h3 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h3>
