Fix image extensions

--- a/models.html
+++ b/models.html
@@ -71,10 +71,10 @@
     <div class="container container--mobile">
         <h2><span>You</span> can model too!</h2>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-octocat-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-octocat-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-octocat-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-octocat.png" alt="this should be a printd 3d model">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-octocat-mobile.jpg">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-octocat-mobile.jpg">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-octocat-mobile.jpg">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-octocat.jpg" alt="this should be a printd 3d model">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h3 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h3>
@@ -87,10 +87,10 @@
                 </p>
             </article>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-3d-desk.png" alt="this should be a table">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-desk-mobile.jpg">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-desk-mobile.jpg">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-desk-mobile.jpg">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-3d-desk.jpg" alt="this should be a table">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h3 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h3>
