Fix file extension

--- a/basics.html
+++ b/basics.html
@@ -97,10 +97,10 @@
                     Using a 3d printer is only part of the complete process. To give you an overview we compiled together a nice flow diagram for you:
                 </p>
                     <picture class="flex flex-center margin-top--l">
-                        <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-print-process-mobile.jpg">
-                        <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-print-process-mobile.jpg">
-                        <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-print-process-mobile.jpg">
-                        <img src="assets/img/fab-forever-3d-print-process.jpg" alt="this should be a flow diagram">
+                        <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
+                        <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
+                        <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
+                        <img src="assets/img/fab-forever-3d-print-process.png" alt="this should be a flow diagram">
                     </picture>
             </article>
             <article>
