Fix favicon not loading

--- a/response.html
+++ b/response.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!--<meta http-equiv="refresh" content="5; url=index.html">-->
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
+    <link rel="icon" type="image/x-icon" href="https://rebellionwebdesign.github.io/assets/img/favicon.svg">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
