Delete defer from js link

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
     </footer>
     <!--FOOTER END-->
-    <script src="assets/js/mobile-menu.js" defer></script>
+    <script src="assets/js/mobile-menu.js"></script>
 </body>
 
 </html>
