--- a/materials.html
+++ b/materials.html
@@ -154,7 +154,7 @@
     </footer>
     <!--FOOTER END-->
     
-    <script src="assets/js/mobile-menu.js" defer></script>
+    <script src="assets/js/mobile-menu.js"></script>
 </body>
 
 </html>
