--- a/response.html
+++ b/response.html
@@ -100,6 +100,6 @@
 
 
 
-    <script src="assets/js/mobile-menu.js" defer></script>
+    <script src="assets/js/mobile-menu.js"></script>
 </body>
 </html>
