--- a/models.html
+++ b/models.html
@@ -132,6 +132,6 @@
 
 
 
-    <script src="assets/js/mobile-menu.js" defer></script>
+    <script src="assets/js/mobile-menu.js"></script>
 </body>
 </html>
