--- a/materials.html
+++ b/materials.html
@@ -72,10 +72,10 @@
             <div class="container flex flex-column flex-column--mobile">
             <h2><span>Follow</span> the white filament</h2>
                 <picture class="flex flex-center">
-                    <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.jpg">
-                    <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.jpg">
-                    <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure-mobile.jpg">
-                    <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.jpg"
+                    <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                    <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                    <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                    <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.png"
                         alt="this should be a filament image">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
@@ -101,10 +101,10 @@
                         easily and still withstands temperatures of 100 degrees celsius.</p>
                 </article>
                 <picture class="flex flex-center">
-                    <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.jpg">
-                    <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.jpg">
-                    <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.jpg">
-                    <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.jpg"
+                    <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                    <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                    <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                    <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.png"
                         alt="this should be a filament roll">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
