Update image paths

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg"
+                    <img class="headerbar__logo" src="assets/img/svg/fab-forever-logo.svg"
                         alt="the fab forever logo">
                 </a>
-                <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
+                <img class="mobile--open" src="assets/img/svg/bars-solid.svg" alt="this should be an open icon">
             </div>
             <div class="column-2 column-2__nav--mobile closed flex flex-end">
-                <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be a close icon">
+                <img class="mobile--close" src="assets/img/svg/xmark-solid.svg" alt="this should be a close icon">
                 <nav>
                     <ul>
                         <li>
@@ -79,7 +79,7 @@
 
         <!--ABOUT SECTION START-->
         <section class="section-full background-reverse flex flex-center flex-column flex-between">
-            <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+            <img class="flip-x divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
             <div class="container flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile text-white text-shadow">
                     <h2><span>3D</span>Printing resources for you!</h2>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <img class="divider divider-bottom" src="assets/img/shape-divider-bottom.svg"
+            <img class="divider divider-bottom" src="assets/img/svg/shape-divider-bottom.svg"
                 alt="the bottom shape divider">
         </section>
         <!--ABOUT SECTION END-->
@@ -130,7 +130,7 @@
 
         <!--CONTACT SECTION START-->
         <section class="section-full background flex flex-center flex-column flex-between ">
-            <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+            <img class="divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
             <div class="container flex-column-mobile flex flex-center text-center-mobile container-padding-mobile">
                 <div
                     class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile margin-bottom--l">
@@ -157,7 +157,7 @@
                     </form>
                 </div>
             </div>
-            <img class="flip-x divider divider-bottom" src="assets/img/shape-divider-bottom.svg"
+            <img class="flip-x divider divider-bottom" src="assets/img/svg/shape-divider-bottom.svg"
                 alt="the bottom shape divider">
         </section>
         <!--CONTACT SECTION END-->
